updated at: 2020-02-13 02:02, オリジナル3Dモデル　『エルギット(Ergit)』V2 - virtual-boys - BOOTH

--- a/VRChat/70/1163570.html
+++ b/VRChat/70/1163570.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>
-      オリジナル3Dモデル　『エルギット(Ergit)』ver1.1 - virtual-boys - BOOTH
+      オリジナル3Dモデル　『エルギット(Ergit)』V2 - virtual-boys - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。 ケモノな男の子で元気溌剌なイメージで作りました。 ver1.0から1.1に更新する場合元のデータを破壊してしまうのでプレハブから再度設定しなおしてください。 ◇利用規約◇ 対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。 ただし下記を禁止します。 ・他人が利用できるようにし、著作者の販売を阻害すること。 ・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。 その他 ・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。">
+    "VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。 ケモノな男の子で元気溌剌なイメージで作りました。 ※V2以前のバージョンをお持ちの方は無料でV2をご利用できます。 ◇利用規約◇ 対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。 ただし下記を禁止します。 ・他人が利用できるようにし、著作者の販売を阻害すること。 ・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。 その他 ・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1163570">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "オリジナル3Dモデル　『エルギット(Ergit)』ver1.1 - virtual-boys - BOOTH">
+    "オリジナル3Dモデル　『エルギット(Ergit)』V2 - virtual-boys - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。 ケモノな男の子で元気溌剌なイメージで作りました。 ver1.0から1.1に更新する場合元のデータを破壊してしまうのでプレハブから再度設定しなおしてください。 ◇利用規約◇ 対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。 ただし下記を禁止します。 ・他人が利用できるようにし、著作者の販売を阻害すること。 ・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。 その他 ・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。">
+    "VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。 ケモノな男の子で元気溌剌なイメージで作りました。 ※V2以前のバージョンをお持ちの方は無料でV2をご利用できます。 ◇利用規約◇ 対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。 ただし下記を禁止します。 ・他人が利用できるようにし、著作者の販売を阻害すること。 ・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。 その他 ・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/b8928837-61fc-4590-ab7f-bb54449de24e_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/55436e44-501d-4291-845c-dfdc38187de1_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "オリジナル3Dモデル　『エルギット(Ergit)』ver1.1 - virtual-boys - BOOTH">
+    "オリジナル3Dモデル　『エルギット(Ergit)』V2 - virtual-boys - BOOTH">
     <meta property="og:description" content=
-    "VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。 ケモノな男の子で元気溌剌なイメージで作りました。 ver1.0から1.1に更新する場合元のデータを破壊してしまうのでプレハブから再度設定しなおしてください。 ◇利用規約◇ 対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。 ただし下記を禁止します。 ・他人が利用できるようにし、著作者の販売を阻害すること。 ・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。 その他 ・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。">
+    "VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。 ケモノな男の子で元気溌剌なイメージで作りました。 ※V2以前のバージョンをお持ちの方は無料でV2をご利用できます。 ◇利用規約◇ 対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。 ただし下記を禁止します。 ・他人が利用できるようにし、著作者の販売を阻害すること。 ・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。 その他 ・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/b8928837-61fc-4590-ab7f-bb54449de24e_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/55436e44-501d-4291-845c-dfdc38187de1_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1163570">
     <meta name="skip_auto_login" content="">
@@ -144,7 +144,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          オリジナル3Dモデル　『エルギット(Ergit)』ver1.1
+                          オリジナル3Dモデル　『エルギット(Ergit)』V2
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -238,7 +238,7 @@
                           "https://booth.pm/ja/items/1163570"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "オリジナル3Dモデル　『エルギット(Ergit)』ver1.1 | virtual-boys"
+                          "オリジナル3Dモデル　『エルギット(Ergit)』V2 | virtual-boys"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -257,41 +257,37 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "オリジナル3Dモデル　『エルギット(Ergit)』ver1.1"
+                            <img alt="オリジナル3Dモデル　『エルギット(Ergit)』V2"
                             class="market-item-detail-item-image"
                             src=
-                            "https://booth.pximg.net/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/b8928837-61fc-4590-ab7f-bb54449de24e_base_resized.jpg">
+                            "https://booth.pximg.net/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/55436e44-501d-4291-845c-dfdc38187de1_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "オリジナル3Dモデル　『エルギット(Ergit)』ver1.1"
+                            <img alt="オリジナル3Dモデル　『エルギット(Ergit)』V2"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/e8c005b8-4a0b-4f02-95eb-27d6802c2582_base_resized.jpg">
+                            "https://booth.pximg.net/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/ee16c69c-ac7c-405b-aabe-03bb5c1512ba_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "オリジナル3Dモデル　『エルギット(Ergit)』ver1.1"
+                            <img alt="オリジナル3Dモデル　『エルギット(Ergit)』V2"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/61e88c44-110b-4fde-98e5-57981b7fa365_base_resized.jpg">
+                            "https://booth.pximg.net/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/e17b029b-5f30-41f8-9ea3-9a0a3e25a235_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt=
-                            "オリジナル3Dモデル　『エルギット(Ergit)』ver1.1"
+                            <img alt="オリジナル3Dモデル　『エルギット(Ergit)』V2"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/da25ac3c-c22e-4116-8536-f71fa98d7491_base_resized.jpg">
+                            "https://booth.pximg.net/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/8a501868-d5db-437e-ae6a-e845a53529cb_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -299,19 +295,19 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/b8928837-61fc-4590-ab7f-bb54449de24e_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/55436e44-501d-4291-845c-dfdc38187de1_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/e8c005b8-4a0b-4f02-95eb-27d6802c2582_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/ee16c69c-ac7c-405b-aabe-03bb5c1512ba_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/61e88c44-110b-4fde-98e5-57981b7fa365_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/e17b029b-5f30-41f8-9ea3-9a0a3e25a235_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/da25ac3c-c22e-4116-8536-f71fa98d7491_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/8a501868-d5db-437e-ae6a-e845a53529cb_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -320,8 +316,7 @@
                           <p class="autolink u-text-wrap">
                             VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。
                             ケモノな男の子で元気溌剌なイメージで作りました。
-                            ver1.0から1.1に更新する場合元のデータを破壊してしまうのでプレハブから再度設定しなおしてください。
-                            ◇利用規約◇
+                            ※V2以前のバージョンをお持ちの方は無料でV2をご利用できます。 ◇利用規約◇
                             対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。
                             ただし下記を禁止します。
                             ・他人が利用できるようにし、著作者の販売を阻害すること。
@@ -334,17 +329,16 @@
                             （タオルライセンス 販売用 version0.9）
                             ◇unitypackage導入前に◇
                             ・VRCSDK、Arktoon-Shaders、DynamicBone(任意)をImportしたうえでImportすること
-                            ◇内容物◇ ・Ergit.unitypackage ┃
-                            ┣・Ergitプレハブ　――　DynamicBoneやリップシンクなどのセットアップ済みプレハブ
-                            ┃ ┣・Ergit.fbx　――　fbx形式の3Dモデルファイル ┃
+                            ◇内容物◇ ・Ergit_V2.unitypackage ┃
+                            ┣・AvatarScene　――　DynamicBoneやVRChatアップロード用セットアップ済みモデルを配置したSceneファイル
+                            ┃ ┣・Modelsフォルダ ┃┃
+                            ┃┣・Ergit_V2.fbx　――　通常の3Dモデルファイル ┃┃
+                            ┃┗・Ergit_V2_Parting.fbx　――　素体以外が別オブジェクトになっている3Dモデルファイル
+                            ┃
                             ┣・Animationsフォルダ　――　AnimationOverride用のAnimation
                             ┃ ┣・Materialsフォルダ　――　Material ┃
                             ┗・Texturesフォルダ　――　Texture
-                            ・Ergit(NotJoined).fbx　――　メッシュ結合する前の3Dモデルデータ
-                            ・Body_Mixed.psd　――　ざっくりレイヤー分けしたテクスチャデータ
-                            ◇更新履歴 　2019/03/29 ver1.1に更新 　　・利用規約を改訂
-                            　　・悲しい顔を追加 　　・uvを修正 　　・アイトラッキングに対応
-                            　　・耳が揺れるように
+                            ・Body.psd　――　レイヤー分けしたテクスチャデータ
                           </p>
                         </div>
                       </section>
