--- a/VRChat/79/1343079.html
+++ b/VRChat/79/1343079.html
@@ -6,7 +6,7 @@
       【3Dモデル】タッセルピアス - 缶詰茶房 物販コーナー - BOOTH
     </title>
     <meta name="description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【シェーダー】 裏面の描画ができれば何でも大丈夫です。 ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。 また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！ 【更新情報】 データの内容は予告なく修正、変更する可能性があります。">
+    "＝＝＝check！！＝＝＝ 【FBX･VRM版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。 また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！ 【更新情報】 データの内容は予告なく修正、変更する可能性があります。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1343079">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【3Dモデル】タッセルピアス - 缶詰茶房 物販コーナー - BOOTH">
     <meta name="twitter:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【シェーダー】 裏面の描画ができれば何でも大丈夫です。 ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。 また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！ 【更新情報】 データの内容は予告なく修正、変更する可能性があります。">
+    "＝＝＝check！！＝＝＝ 【FBX･VRM版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。 また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！ 【更新情報】 データの内容は予告なく修正、変更する可能性があります。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1343079/57be5d3e-9c56-454a-ad5f-69092bb97607_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【3Dモデル】タッセルピアス - 缶詰茶房 物販コーナー - BOOTH">
     <meta property="og:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【シェーダー】 裏面の描画ができれば何でも大丈夫です。 ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。 また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！ 【更新情報】 データの内容は予告なく修正、変更する可能性があります。">
+    "＝＝＝check！！＝＝＝ 【FBX･VRM版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing ＝＝＝check！！＝＝＝ 【注意事項】 仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。 また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！ 【更新情報】 データの内容は予告なく修正、変更する可能性があります。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1343079/57be5d3e-9c56-454a-ad5f-69092bb97607_base_resized.jpg">
     <meta property="og:url" content=
@@ -323,9 +323,8 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ＝＝＝check！！＝＝＝ 【利用規約】
+                            ＝＝＝check！！＝＝＝ 【FBX･VRM版：缶詰茶房3Dモデル利用規約】
                             https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing
-                            【シェーダー】 裏面の描画ができれば何でも大丈夫です。
                             ＝＝＝check！！＝＝＝ 【注意事項】
                             仕様上、購入後の返金には対応していません。利用規約と説明書を読み、よく考えてからご購入下さい。
                             また、当店の対応言語は日本語のみとなります。製作者のBAD言語能力では無理だった。ごめんね！
