updated at: 2020-02-13 19:18, 【VRC用】巫女型アバターver2 - ゆぬ店 - BOOTH

--- a/VRChat/14/972414.html
+++ b/VRChat/14/972414.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRC用】巫女型アバター - ゆぬ店 - BOOTH
+      【VRC用】巫女型アバターver2 - ゆぬ店 - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat用アバター ■仕様 巫女型アバター：17962ポリゴン （千早なし：14188ポリゴン） 表情種類：笑顔、不満顔、驚き顔 （各表情に通常、悪い顔、ゲス顔の三種があります） ■内容 ・巫女型アバターfbx ・各種マテリアル ・テクスチャ ・アニメーションファイル 　歩行・idle・座りアニメーションファイル 　瞬きアニメーション 　表情用アニメーションファイル ・カスタムオーバーライド割当 　HANDGUN 不満 　VICTORY 笑顔 　THUMBSUP 驚き ■導入方法">
+    "VRChat用アバター ■仕様 巫女型アバター：20419ポリゴン 表情種類：笑顔、不満顔、驚き顔 （各表情に通常、悪い顔、ゲス顔の三種があります） ■内容 ・巫女型アバターfbx ・各種マテリアル ・テクスチャ ・アニメーションファイル 　表情用アニメーションファイル ■利用について ・収録されているデータについて権利は配布元が有しております。 ・改変しての利用可です。 ・VRCHATでの利用でクレジット表記などの必要はありません。 ・VRCHAT内での利用、商用配信に映る場合に制限は設けません。 ・コンテンツ作成で商用非商用、全年齢・R18問わず使用可です。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/972414">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRC用】巫女型アバター - ゆぬ店 - BOOTH">
+    "【VRC用】巫女型アバターver2 - ゆぬ店 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat用アバター ■仕様 巫女型アバター：17962ポリゴン （千早なし：14188ポリゴン） 表情種類：笑顔、不満顔、驚き顔 （各表情に通常、悪い顔、ゲス顔の三種があります） ■内容 ・巫女型アバターfbx ・各種マテリアル ・テクスチャ ・アニメーションファイル 　歩行・idle・座りアニメーションファイル 　瞬きアニメーション 　表情用アニメーションファイル ・カスタムオーバーライド割当 　HANDGUN 不満 　VICTORY 笑顔 　THUMBSUP 驚き ■導入方法">
+    "VRChat用アバター ■仕様 巫女型アバター：20419ポリゴン 表情種類：笑顔、不満顔、驚き顔 （各表情に通常、悪い顔、ゲス顔の三種があります） ■内容 ・巫女型アバターfbx ・各種マテリアル ・テクスチャ ・アニメーションファイル 　表情用アニメーションファイル ■利用について ・収録されているデータについて権利は配布元が有しております。 ・改変しての利用可です。 ・VRCHATでの利用でクレジット表記などの必要はありません。 ・VRCHAT内での利用、商用配信に映る場合に制限は設けません。 ・コンテンツ作成で商用非商用、全年齢・R18問わず使用可です。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/cb2767e1-b341-403a-9c80-9f11856b6484_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/a522d5fb-a055-48a0-9f37-424c1680d335_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRC用】巫女型アバター - ゆぬ店 - BOOTH">
+    "【VRC用】巫女型アバターver2 - ゆぬ店 - BOOTH">
     <meta property="og:description" content=
-    "VRChat用アバター ■仕様 巫女型アバター：17962ポリゴン （千早なし：14188ポリゴン） 表情種類：笑顔、不満顔、驚き顔 （各表情に通常、悪い顔、ゲス顔の三種があります） ■内容 ・巫女型アバターfbx ・各種マテリアル ・テクスチャ ・アニメーションファイル 　歩行・idle・座りアニメーションファイル 　瞬きアニメーション 　表情用アニメーションファイル ・カスタムオーバーライド割当 　HANDGUN 不満 　VICTORY 笑顔 　THUMBSUP 驚き ■導入方法">
+    "VRChat用アバター ■仕様 巫女型アバター：20419ポリゴン 表情種類：笑顔、不満顔、驚き顔 （各表情に通常、悪い顔、ゲス顔の三種があります） ■内容 ・巫女型アバターfbx ・各種マテリアル ・テクスチャ ・アニメーションファイル 　表情用アニメーションファイル ■利用について ・収録されているデータについて権利は配布元が有しております。 ・改変しての利用可です。 ・VRCHATでの利用でクレジット表記などの必要はありません。 ・VRCHAT内での利用、商用配信に映る場合に制限は設けません。 ・コンテンツ作成で商用非商用、全年齢・R18問わず使用可です。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/cb2767e1-b341-403a-9c80-9f11856b6484_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/a522d5fb-a055-48a0-9f37-424c1680d335_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/972414">
     <meta name="skip_auto_login" content="">
@@ -131,7 +131,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【VRC用】巫女型アバター
+                          【VRC用】巫女型アバターver2
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -224,7 +224,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/972414"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="【VRC用】巫女型アバター | ゆぬ店"
+                          data-text="【VRC用】巫女型アバターver2 | ゆぬ店"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -243,27 +243,18 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRC用】巫女型アバター" class=
+                            <img alt="【VRC用】巫女型アバターver2" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/cb2767e1-b341-403a-9c80-9f11856b6484_base_resized.jpg">
+                            "https://booth.pximg.net/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/a522d5fb-a055-48a0-9f37-424c1680d335_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRC用】巫女型アバター" class=
+                            <img alt="【VRC用】巫女型アバターver2" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/da1b2b84-01fb-4c73-b4d1-8182d347a167_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="【VRC用】巫女型アバター" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/8687651e-853c-40a7-9935-c08342fd839d_base_resized.jpg">
+                            "https://booth.pximg.net/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/03aa6b9a-c3bf-41bf-849c-b1a7f278b3a3_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -271,33 +262,22 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/cb2767e1-b341-403a-9c80-9f11856b6484_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/a522d5fb-a055-48a0-9f37-424c1680d335_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/da1b2b84-01fb-4c73-b4d1-8182d347a167_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/8687651e-853c-40a7-9935-c08342fd839d_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/0adee944-20a4-4964-9f9d-2490cbfecd89/i/972414/03aa6b9a-c3bf-41bf-849c-b1a7f278b3a3_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            VRChat用アバター ■仕様 巫女型アバター：17962ポリゴン
-                            （千早なし：14188ポリゴン） 表情種類：笑顔、不満顔、驚き顔
+                            VRChat用アバター ■仕様 巫女型アバター：20419ポリゴン
+                            表情種類：笑顔、不満顔、驚き顔
                             （各表情に通常、悪い顔、ゲス顔の三種があります） ■内容
                             ・巫女型アバターfbx ・各種マテリアル ・テクスチャ
-                            ・アニメーションファイル 　歩行・idle・座りアニメーションファイル
-                            　瞬きアニメーション 　表情用アニメーションファイル
-                            ・カスタムオーバーライド割当 　HANDGUN 不満 　VICTORY 笑顔
-                            　THUMBSUP 驚き ■導入方法
-                            　VRCSDK、Cubedシェーダー(https://github.com/cubedparadox/Cubeds-Unity-Shaders)、UTS2.0(http://unity-chan.com/download/releaseNote.php?id=UTS2_0)が導入済みの環境でご使用いただけます。
-                            　prefabフォルダには、髪・袖にDynamicBorn設定済みのものと、DynamicBorn不使用のprefabが入っております。
-                            それぞれ通常、悪い顔、ゲス顔の設定されたものがあります。
-                            シーンに追加しアップするとそのままご使用になれます。 ■利用について
+                            ・アニメーションファイル 　表情用アニメーションファイル ■利用について
                             ・収録されているデータについて権利は配布元が有しております。
                             ・改変しての利用可です。
                             ・VRCHATでの利用でクレジット表記などの必要はありません。
@@ -307,6 +287,7 @@
                             ・政治的パフォーマンス、宗教活動、ヘイトスピーチ、他者への嫌がらせ行為、その他公序良俗に反する目的で使用することを禁止します
                             ・本データを使用したことにより発生した問題、損失について配布元は一切の責任を負いません
                             　 2018/08/26　髪にUTS2.0を使用したものを追加。
+                            2020/02/14　全体的に進化してver2に更新。
                           </p>
                         </div>
                       </section>
@@ -359,6 +340,16 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 unity
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href="https://booth.pm/ja/search/FBX">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                FBX
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
