updated at: 2020-02-13 22:01, 3Dモデル　「畳」　 - 樫の村 - BOOTH

--- a/VRChat/26/1283226.html
+++ b/VRChat/26/1283226.html
@@ -6,7 +6,7 @@
       3Dモデル　「畳」　 - 樫の村 - BOOTH
     </title>
     <meta name="description" content=
-    "VRChatでの使用を想定した畳の3Dモデルです。 商品内容 　unitypacage 　　各モデル（FBX,blend） テクスチャ　3種 　　 禁止事項 　再配布 　 　　">
+    "VRChatでの使用を想定した畳の3Dモデルです。 商品内容 　unitypacage 　　各モデル（FBX,blend） テクスチャ　col3種　+normal等 　　 禁止事項 　再配布 　製作者つじノシカがダメだと思ったこと 　　">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1283226">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="3Dモデル　「畳」　 - 樫の村 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChatでの使用を想定した畳の3Dモデルです。 商品内容 　unitypacage 　　各モデル（FBX,blend） テクスチャ　3種 　　 禁止事項 　再配布 　 　　">
+    "VRChatでの使用を想定した畳の3Dモデルです。 商品内容 　unitypacage 　　各モデル（FBX,blend） テクスチャ　col3種　+normal等 　　 禁止事項 　再配布 　製作者つじノシカがダメだと思ったこと 　　">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/2692783f-714e-4ffd-b82f-df2b0cffb130/i/1283226/4b01defa-f2eb-4428-bb6c-912ca8148715_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="3Dモデル　「畳」　 - 樫の村 - BOOTH">
     <meta property="og:description" content=
-    "VRChatでの使用を想定した畳の3Dモデルです。 商品内容 　unitypacage 　　各モデル（FBX,blend） テクスチャ　3種 　　 禁止事項 　再配布 　 　　">
+    "VRChatでの使用を想定した畳の3Dモデルです。 商品内容 　unitypacage 　　各モデル（FBX,blend） テクスチャ　col3種　+normal等 　　 禁止事項 　再配布 　製作者つじノシカがダメだと思ったこと 　　">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/2692783f-714e-4ffd-b82f-df2b0cffb130/i/1283226/4b01defa-f2eb-4428-bb6c-912ca8148715_base_resized.jpg">
     <meta property="og:url" content=
@@ -307,8 +307,9 @@
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
                             VRChatでの使用を想定した畳の3Dモデルです。 商品内容
-                            　unitypacage 　　各モデル（FBX,blend） テクスチャ　3種
-                            　　 禁止事項 　再配布 　 　　
+                            　unitypacage 　　各モデル（FBX,blend）
+                            テクスチャ　col3種　+normal等 　　 禁止事項 　再配布
+                            　製作者つじノシカがダメだと思ったこと 　　
                           </p>
                         </div>
                       </section>
