updated at: 2020-02-14 00:59, 【無料】およそ7.5頭身女性素体 - R産地直送市場 - BOOTH

--- a/VRChat/04/1213304.html
+++ b/VRChat/04/1213304.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      およそ7.5頭身女性素体 - R産地直送市場 - BOOTH
+      【無料】およそ7.5頭身女性素体 - R産地直送市場 - BOOTH
     </title>
     <meta name="description" content=
     "モデル作成時の過程で作ったおよそ7.5頭身の女性素体です。 ご自由にお使いください。 https://rrrrr.booth.pm/items/1711762 ↑こっちのほうが新しいかもです。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "およそ7.5頭身女性素体 - R産地直送市場 - BOOTH">
+    "【無料】およそ7.5頭身女性素体 - R産地直送市場 - BOOTH">
     <meta name="twitter:description" content=
     "モデル作成時の過程で作ったおよそ7.5頭身の女性素体です。 ご自由にお使いください。 https://rrrrr.booth.pm/items/1711762 ↑こっちのほうが新しいかもです。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/cfe8f6e5-4c73-45fc-9a3c-49b5982ef532/i/1213304/9fc27d31-855e-4c21-8ab9-20ae12dbadcd_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "およそ7.5頭身女性素体 - R産地直送市場 - BOOTH">
+    "【無料】およそ7.5頭身女性素体 - R産地直送市場 - BOOTH">
     <meta property="og:description" content=
     "モデル作成時の過程で作ったおよそ7.5頭身の女性素体です。 ご自由にお使いください。 https://rrrrr.booth.pm/items/1711762 ↑こっちのほうが新しいかもです。">
     <meta property="og:image" content=
@@ -131,7 +131,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          およそ7.5頭身女性素体
+                          【無料】およそ7.5頭身女性素体
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -162,7 +162,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      素体
+                                      無料
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -272,7 +272,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1213304"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="およそ7.5頭身女性素体 | R産地直送市場"
+                          data-text="【無料】およそ7.5頭身女性素体 | R産地直送市場"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -291,7 +291,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="およそ7.5頭身女性素体" class=
+                            <img alt="【無料】およそ7.5頭身女性素体" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/cfe8f6e5-4c73-45fc-9a3c-49b5982ef532/i/1213304/9fc27d31-855e-4c21-8ab9-20ae12dbadcd_base_resized.jpg">
                           </div>
