--- a/VRChat/46/1145446.html
+++ b/VRChat/46/1145446.html
@@ -6,7 +6,7 @@
       《Ver.3.0》ウミウシ妖精（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH
     </title>
     <meta name="description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
+    "＝＝＝check！！＝＝＝ 【FBX･VRM版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【PMX版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1145446">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "《Ver.3.0》ウミウシ妖精（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta name="twitter:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
+    "＝＝＝check！！＝＝＝ 【FBX･VRM版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【PMX版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1145446/44e02f58-cfcb-4c72-85f8-b3c6452837e2_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "《Ver.3.0》ウミウシ妖精（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH">
     <meta property="og:description" content=
-    "＝＝＝check！！＝＝＝ 【利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【『PMX版』利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
+    "＝＝＝check！！＝＝＝ 【FBX･VRM版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing 【PMX版：缶詰茶房3Dモデル利用規約】 https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing 【説明書】">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1145446/44e02f58-cfcb-4c72-85f8-b3c6452837e2_base_resized.jpg">
     <meta property="og:url" content=
@@ -301,9 +301,9 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ＝＝＝check！！＝＝＝ 【利用規約】
+                            ＝＝＝check！！＝＝＝ 【FBX･VRM版：缶詰茶房3Dモデル利用規約】
                             https://docs.google.com/document/d/1QoaZKkLaNzW05KeVw-gADIxhhZQCRdJEiRMze-BEKRI/edit?usp=sharing
-                            【『PMX版』利用規約】
+                            【PMX版：缶詰茶房3Dモデル利用規約】
                             https://docs.google.com/document/d/12R4WrpVyV9WPBQMeI7CTE7KC1-5-GMjUJ_CiMkxnsiA/edit?usp=sharing
                             【説明書】
                             https://docs.google.com/document/d/1FPwEBlFVjOnrqauMDPyh1WzP3N9ff0TP38ySq4NRDOs/edit?usp=sharing
@@ -408,6 +408,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 Quest対応
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%81%B5%E3%81%83%E3%81%8E%E3%82%85%E3%81%82%E3%81%B0%E3%81%9F%E3%83%BC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                ふぃぎゅあばたー
                               </div>
                             </div></a>
                           </div>
