updated at: 2020-02-15 00:42, 【3Dモデル】スチームパンク形の腕輪 - pareuchi - BOOTH

--- a/VRChat/80/1234880.html
+++ b/VRChat/80/1234880.html
@@ -6,7 +6,7 @@
       【3Dモデル】スチームパンク形の腕輪 - pareuchi - BOOTH
     </title>
     <meta name="description" content=
-    "▶３Dモデル【スチームパンク形腕輪】◀ アニメーションが入っています。 ▼ここで見ることができます。▼ https://twitter.com/pareuchi/status/1097537225162514432 ポリゴン　:　9056ポリゴン シェーダー　:　Unitychan Toon Shader2が中に入っています。バージョンはv2.0.5です。 https://github.com/unity3d-jp/UnityChanToonShaderVer2_Project ▶使い方◀ MA-169 Unity Package fileをunityにドラッグアンドドロップしてください。">
+    "▶３Dモデル【スチームパンク形腕輪】◀ アニメーションが入っています。 ▼ここで見ることができます。▼ https://twitter.com/pareuchi/status/1097537225162514432 ポリゴン　:　9056ポリゴン シェーダー　:　Unitychan Toon Shader2が中に入っています。バージョンはv2.0.5です。 https://github.com/unity3d-jp/UnityChanToonShaderVer2_Project ▶使い方◀ Udewa Unity Package fileをunityにドラッグアンドドロップしてください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1234880">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【3Dモデル】スチームパンク形の腕輪 - pareuchi - BOOTH">
     <meta name="twitter:description" content=
-    "▶３Dモデル【スチームパンク形腕輪】◀ アニメーションが入っています。 ▼ここで見ることができます。▼ https://twitter.com/pareuchi/status/1097537225162514432 ポリゴン　:　9056ポリゴン シェーダー　:　Unitychan Toon Shader2が中に入っています。バージョンはv2.0.5です。 https://github.com/unity3d-jp/UnityChanToonShaderVer2_Project ▶使い方◀ MA-169 Unity Package fileをunityにドラッグアンドドロップしてください。">
+    "▶３Dモデル【スチームパンク形腕輪】◀ アニメーションが入っています。 ▼ここで見ることができます。▼ https://twitter.com/pareuchi/status/1097537225162514432 ポリゴン　:　9056ポリゴン シェーダー　:　Unitychan Toon Shader2が中に入っています。バージョンはv2.0.5です。 https://github.com/unity3d-jp/UnityChanToonShaderVer2_Project ▶使い方◀ Udewa Unity Package fileをunityにドラッグアンドドロップしてください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/b38071b4-d937-4705-8f7a-253fcf5af4ff/i/1234880/c3a7410d-9584-41cf-a71e-8fe757b01e6a_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【3Dモデル】スチームパンク形の腕輪 - pareuchi - BOOTH">
     <meta property="og:description" content=
-    "▶３Dモデル【スチームパンク形腕輪】◀ アニメーションが入っています。 ▼ここで見ることができます。▼ https://twitter.com/pareuchi/status/1097537225162514432 ポリゴン　:　9056ポリゴン シェーダー　:　Unitychan Toon Shader2が中に入っています。バージョンはv2.0.5です。 https://github.com/unity3d-jp/UnityChanToonShaderVer2_Project ▶使い方◀ MA-169 Unity Package fileをunityにドラッグアンドドロップしてください。">
+    "▶３Dモデル【スチームパンク形腕輪】◀ アニメーションが入っています。 ▼ここで見ることができます。▼ https://twitter.com/pareuchi/status/1097537225162514432 ポリゴン　:　9056ポリゴン シェーダー　:　Unitychan Toon Shader2が中に入っています。バージョンはv2.0.5です。 https://github.com/unity3d-jp/UnityChanToonShaderVer2_Project ▶使い方◀ Udewa Unity Package fileをunityにドラッグアンドドロップしてください。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/b38071b4-d937-4705-8f7a-253fcf5af4ff/i/1234880/c3a7410d-9584-41cf-a71e-8fe757b01e6a_base_resized.jpg">
     <meta property="og:url" content=
@@ -265,7 +265,7 @@
                             ポリゴン　:　9056ポリゴン シェーダー　:　Unitychan Toon
                             Shader2が中に入っています。バージョンはv2.0.5です。
                             https://github.com/unity3d-jp/UnityChanToonShaderVer2_Project
-                            ▶使い方◀ MA-169 Unity Package
+                            ▶使い方◀ Udewa Unity Package
                             fileをunityにドラッグアンドドロップしてください。
                             Unity上の「Project」でAssets/UdewaのなかのシーンのUdewaをダブルクリックしてください。
                             ▶内容説明◀ ・Udewaフォルダ
