updated at: 2020-02-15 03:21, 【VRC向けオリジナル3Dモデル】セフィ.ver3.4.0 - エルフの森静岡支部 - BOOTH

--- a/VRChat/99/1145899.html
+++ b/VRChat/99/1145899.html
@@ -269,6 +269,16 @@
                             "https://booth.pximg.net/0d2468c0-1ae0-44e4-9281-c6f1646d3f41/i/1145899/015b3cf5-d71c-4d30-a27f-b7962760e749_base_resized.jpg">
                           </div>
                         </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt=
+                            "【VRC向けオリジナル3Dモデル】セフィ.ver3.4.0" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/0d2468c0-1ae0-44e4-9281-c6f1646d3f41/i/1145899/743e7fd8-1db8-4db3-b0c5-02d14962cf49_base_resized.jpg">
+                          </div>
+                        </div>
                       </div>
                       <div class="primary-image-thumbnails">
                         <a class="pointer">
@@ -283,6 +293,10 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/0d2468c0-1ae0-44e4-9281-c6f1646d3f41/i/1145899/015b3cf5-d71c-4d30-a27f-b7962760e749_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/0d2468c0-1ae0-44e4-9281-c6f1646d3f41/i/1145899/743e7fd8-1db8-4db3-b0c5-02d14962cf49_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
